<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Uhr v1.1</string>
  <string name="programmaticallyAdded">programatically added</string>
  <string name="action_settings">Settings</string>
  <string name="vorgaben">Vorgaben</string>
  <string name="sagDieZeitEinmal">Sag\' die Zeit jetzt einmal an</string>
  <string name="sagJedeMinute">Sag\' jede Minute an</string>
  <string name="zeitansage">Zeitansage</string>
  <string name="sagJedeViertelstunde">Sag\' jede Viertelstunde an</string>
  <string name="sagNichtJedeMinute">Sag\' nicht jede Minute an</string>
  <string name="sagNichtJedeViertelstunde">Sag\' nicht jede Viertelstunde an</string>
  <string name="mitKuckuck">mit Kuckuck und Gong</string>
  <string name="ohneKuckuck">ohne Kuckuck und Gong</string>
  <string name="doch">Doch !</string>
  <string name="lieberNicht">Lieber nicht.</string>
  <string name="einDatum">1999-08-07 06:55:44.333 +0200</string>
  <string name="lieberNichtJedeMinute">lieber nicht Jede Minute</string>
  <string name="dochJedeViertelstunde">Doch Jede Viertelstunde !</string>
  <string name="dochJedeMinute">Doch Jede Minute !</string>
  <string name="lieberNichtJedeViertelstunde">Lieber nicht Jede Viertelstunde.</string>
  <string name="dochMitKuckuck">Doch mit Kuckuck !</string>
  <string name="lieberOhneKuckuck">Lieber ohne Kuckuck.</string>

</resources>
